# logi-hypr

./: Cargo.toml  config.toml  flake.nix  module.nix  readme.md
src/: config.rs  context.rs  input.rs  main.rs
